<resources>
    <string name="app_name">Luggage Assistant</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="view_account">View Account</string>
    <string name="user_details">User Details</string>
    <string name="first_name_show">First Name:</string>
    <string name="last_name_show">Last Name:</string>
    <string name="phone_number_show">Phone Number:</string>
    <string name="email_show">Email:</string>
    <string name="select_country_code">Select Country Code</string>
    <string name="confirm_password">Confirm Password</string>
<!--    <string name="age">Age</string>-->
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="add_trip_partner">Add trip partner (+)</string>
    <string name="select_special_preferences">Select Special Preferences</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="age">Age</string>
    <string name="enter_your_partner_s_age">Enter your partner\'s age</string>
    <string name="remove_trip_partner">Remove trip partner (-)</string>
    <string name="select_partner_s_special_preferences">Select Partner\'s Special Preferences</string>
    <string name="name">Name</string>
    <string name="add_luggage">Add luggage</string>
    <string name="add_another_luggage">Add luggage (+)</string>
    <string name="back">Back</string>
    <string-array name="special_preferences">
        <item>Medication</item>
        <item>Dental accessories</item>
        <item>Hearing aid</item>
        <item>Contact lenses</item>
    </string-array>
    <string-array name="luggage_type_options">
        <item>Personal item</item>
        <item>Carry-on</item>
        <item>Checked item</item>
    </string-array>
    <string-array name="special_accessories">
        <item>Baby equipment</item>
        <item>Musical instruments</item>
        <item>Sports equipment</item>
        <item>Mobility equipment</item>
    </string-array>
</resources>