<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="80dp"> <!-- lasam loc pentru BottomNavigation -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!" />

        <Button
            android:id="@+id/btn_view_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_account" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout" />

        <Button
            android:id="@+id/btn_add_luggage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_luggage" />

    </LinearLayout>
</ScrollView>
